2021-03-05  Ulrich Müller  <ulm@gentoo.org>

	* devbook-mode.el: Add "wp" and "XML" to package keywords.
	* gentoo-newsitem-mode.el: Change package keywords to "wp".
	* glep-mode.el: Ditto.

2020-07-21  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.51 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2020-04-26  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-arch-list): Update default list of
	architectures.
	(ebuild-mode-arch-stable-list): Try to read arches.desc first.

2020-03-07  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.50 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2020-02-10  Ulrich Müller  <ulm@gentoo.org>

	* devbook-mode.el (devbook-mode): Make nxml-child-indent local
	in the current buffer.

2020-02-08  Ulrich Müller  <ulm@gentoo.org>

	* devbook-mode.el: New file. Major mode for editing the
	Gentoo Devmanual, derived mode of nxml-mode.
	* ebuild-mode.texi (devbook-mode): Document it.
	* Makefile (DISTFILES): Add devbook-mode.el.

2019-12-21  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.49 released.

	* ebuild-mode-keywords.el
	(ebuild-mode-keywords-eclass-deprecated): Add elisp-need-emacs.
	(ebuild-mode-keywords-*): Regenerated.

2019-12-11  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.48 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* glep-mode.el (glep-mode-insert-skeleton): Update template to use
	the CC-BY-SA-4.0 license, following the change in GLEP 2.

2019-07-28  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.47 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2018-09-17  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.46 released.

2018-09-16  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-update-copyright)
	(ebuild-mode-insert-skeleton): Use UTC to avoid flapping.

	* ebuild-mode.el (ebuild-mode-update-copyright): Extend function